add lock icon to videos

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,8 +17,7 @@ body,
 }
 
 .card:hover {
-  transform: translateY(-4px);
-  transition: transform 0.2s;
+  background-color: #f8f9fa;
 }
 h2,
 h3,
